# FounderOS

./: .gitignore  AI_INSTRUCTIONS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE_HANDOFF.md  DECISIONS.md  DECISION_LOG.md  ENGINEERING_HANDBOOK.md  ENGINEERING_PRINCIPLES.md  FOUNDEROS_ENGINEERING_ASSESSMENT.md  IDEAS_BACKLOG.md  LESSONS_LEARNED.md  LICENSE  MILESTONE_10_HANDOFF.md  MILESTONE_11_1_HANDOFF.md  MILESTONE_11_2_HANDOFF.md  MILESTONE_11_HANDOFF.md  MILESTONE_12A_HANDOFF.md  MILESTONE_12B_HANDOFF.md  MILESTONE_12C_HANDOFF.md  MILESTONE_1_COMPLETE_OUTPUT.md  MILESTONE_2_COMPLETE_OUTPUT.md  MILESTONE_3_COMPLETE_OUTPUT.md  MILESTONE_4_COMPLETE_OUTPUT.md  MILESTONE_5_HANDOFF.md  MILESTONE_6_HANDOFF.md  MILESTONE_7_HANDOFF.md  MILESTONE_8_HANDOFF.md  MILESTONE_9_HANDOFF.md  PROJECT_CONTEXT.md  README.md  RFC_0001_HANDOFF.md  ROADMAP.md  Vision.md  atlas_topology.html  constraints.txt  morning_brief.md  pyproject.toml  sbom.cdx.json
.ai/: AI_INSTRUCTIONS.md  BUILD_ROADMAP.md  CURRENT_SPRINT.md  DECISIONS.md  ENGINEERING_HANDBOOK.md  PROJECT_CONTEXT.md  README.md
agents/: ai-architect.md  ceo.md  cto.md  designer.md  devops.md  lead-engineer.md  market-research.md  marketing.md  network-engineer.md  product-manager.md  qa.md  sales.md  ux-researcher.md  venture-capitalist.md
architecture/: FounderOS_Architecture_Specification_v1.0.md  FounderOS_v0.2_Blueprint.md  agent-communication.md  artifact-flow.md  state-machine.md  system-overview.md
docs/: ATLAS_ADMINISTRATION_SECURITY.md  ATLAS_AUDIT2_REPORT.md  ATLAS_INBOX_ACTIONABILITY_REPORT.md  ATLAS_PLATFORM_SUPPORT.md  (+5 more)
(+705 files in other folders)
