[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "founderos-runtime"
version = "0.1.0"
description = "Minimal contract-enforcing runtime foundation for FounderOS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jsonschema[format]>=4.23,<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "PyYAML>=6,<7",
]

[project.scripts]
founderos = "founderos_runtime.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
